--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -1,6 +1,11 @@
 @import url("https://fervent-ui.netlify.app/resources/fervent-ui/fervent-ui.css");
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&family=Ubuntu:wght@300&display=swap');
 
+@import "login.css";
+@import "homepage.css";
+@import "product_page.css";
+@import "cart_wishlist.css";
+
 :root {
     --primary-color: rgb(14, 160, 14);
     --secondary-color: #222725;
@@ -25,169 +30,9 @@ img {
     color: var(--white-color)
 }
 
-.form-container {
-    margin: auto;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-width: 50rem;
-}
-
-.banner-images {
-    margin: 2rem auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 10rem;
-    gap: 1rem;
-    overflow: auto;
-}
-
-.banner-images img {
-    border-radius: 1rem;
-}
-
-.cover-image {
-    display: flex;
-    justify-content: center;
-    height: 35rem;
-    position: relative;
-}
-
-.cover-image img {
-    border-radius: 1rem;
-    opacity: 25%;
-}
-
-.text-over-media-center {
-    position: absolute;
-    top: 45%
-}
-
-.homepage-subgrid {
-    display: flex;
-    gap: 1rem;
-}
-
-@media screen and (min-width: 1000px) {
-    .homepage-subgrid {
-        flex-flow: row;
-    }
-}
-
-@media screen and (max-width: 1000px) {
-    .homepage-subgrid {
-        flex-flow: column;
-    }
-}
-
-.product-page {
-    display:grid;
-    grid-template-columns: 300px 1fr;
-    gap: 1rem;
-    grid-template-areas:
-    "filters-panel product-page-title product-page-title product-page-title"
-    "filters-panel products-panel     products-panel     products-panel"
-    "filters-panel products-panel     products-panel     products-panel";
-}
-
-.product-page-title {
-    grid-area: product-page-title;
-}
-
-.filters-panel {
-    grid-area: filters-panel;
-    background-color: var(--white-color);
-    padding: 2rem;
-    margin-bottom: 0rem;
-}
-
-.filters-panel > div {
-    padding: 0.5rem 0rem;
-}
-
-.products-panel {
-    grid-area: products-panel;
-    display:flex;
-    flex-flow: row wrap;
-    gap: 1rem;
-    justify-content: space-evenly;
-}
-
-.product-page-title {
-    display: block;
-    padding: 2rem;
-}
-
-.price-tag {
-    font-weight: bold;
-}
 
 .heading-center {
     text-align: center;
     padding: 1rem;
     margin: 1rem;
-}
-
-.checkout-panel {
-    grid-area: checkout-panel;
-    padding: 2rem;
-    background-color: var(--white-color);
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-auto-rows: min-content;
-}
-
-.checkout-title,
-.checkout-note,
-button {
-    grid-column: 1/-1;
-}
-
-.checkout-panel hr {
-    border: 2px solid var(--primary-color);
-    width: 100%;
-    grid-column: 1/-1;
-}
-
-.checkout-labels {
-    font-weight: bold;
-    grid-column: 1/2;
-}
-
-.page-title {
-    grid-area: page-title;
-    text-align: center;
-    padding: 2rem;
-}
-
-.products-panel {
-    padding: 2rem;
-    grid-area: products-panel;
-    justify-content: center;
-}
-
-.cart-page {
-    display: grid;
-    grid-template-columns: 1fr 500px;
-    gap: 1rem;
-    grid-template-areas:
-        "page-title         page-title         page-title       checkout-panel"
-        "products-panel     products-panel     products-panel   checkout-panel"
-        "products-panel     products-panel     products-panel   checkout-panel";
-}
-
-.quantity-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.quantity-container button {
-    padding: 0.2rem 0.5rem;
-}
-
-.quantity-container input {
-    width: 30px;
 }
