--- a/src/stylesheet/product_page.css
+++ b/src/stylesheet/product_page.css
@@ -19,7 +19,12 @@
     margin-bottom: 0rem;
 }
 
-.filters-panel>div {
+.filters-panel-container {
+    position: sticky;
+    top: 20px;
+}
+
+.filters-panel > div {
     padding: 0.5rem 0rem;
 }
 
