- Added induvidual product pages - Removed images hardcoding - Added feature points for product db - Used react routing for custom product pages

--- a/src/stylesheet/styles.css
+++ b/src/stylesheet/styles.css
@@ -5,6 +5,7 @@
 @import "homepage.css";
 @import "product_page.css";
 @import "cart_wishlist.css";
+@import "product_detail.css";
 
 :root {
     --primary-color: rgb(14, 160, 14);
@@ -28,6 +29,8 @@ img {
 }
 
 .nav-bar {
+    position: sticky;
+    top: 0px;
     color: var(--white-color)
 }
 
@@ -44,4 +47,9 @@ img {
 
 .slider-container {
     display:block;
+}
+
+a, a:visited, a:hover, a:active {
+    text-decoration: none;
+    color: inherit;
 }
