--- a/src/stylesheet/cart_wishlist.css
+++ b/src/stylesheet/cart_wishlist.css
@@ -47,6 +47,7 @@ button {
 }
 
 .quantity-container {
+    padding-top: 1rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
