--- a/src/stylesheet/cart_wishlist.css
+++ b/src/stylesheet/cart_wishlist.css
@@ -51,12 +51,28 @@ button {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
 }
 
 .quantity-container button {
-    padding: 0.2rem 0.5rem;
+    color: var(--primary-color);
+    margin: 0.2rem;
+    padding: 0.2rem 0.2rem;
+    border: 0px;
 }
 
-.quantity-container input {
-    width: 30px;
+.quantity-container p {
+    margin: 0.2rem;
+    font-size: 1.1rem;
+}
+
+.discount-box-container {
+    display: flex;
+    flex-flow: row-wrap;
+    gap: 5px;
+    grid-column: 1/-1;
+}
+
+.small-input-field {
+    margin: 0.2rem;
 }
