--- a/src/stylesheet/product_page.css
+++ b/src/stylesheet/product_page.css
@@ -31,6 +31,7 @@
 .products-panel {
     grid-area: products-panel;
     display: flex;
+    align-items: flex-start;
     flex-flow: row wrap;
     gap: 1rem;
     justify-content: space-evenly;
@@ -43,4 +44,9 @@
 
 .price-tag {
     font-weight: bold;
+}
+
+.card-clickables {
+    align-self: flex-end;
+    justify-content: center;
 }
