Added product carousel in the homepage - Changed go back to history

--- a/src/stylesheet/styles.css
+++ b/src/stylesheet/styles.css
@@ -6,6 +6,7 @@
 @import "product_page.css";
 @import "cart_wishlist.css";
 @import "product_detail.css";
+@import "product_carousel.css";
 
 :root {
     --primary-color: rgb(14, 160, 14);
