Added toast feature - Adde toastify package - Added toast features when adding items to cart/wishlist - Made minor carousel modifications

--- a/src/stylesheet/product_carousel.css
+++ b/src/stylesheet/product_carousel.css
@@ -15,6 +15,7 @@
 .overlay-text {
     position: absolute;
     font-weight: bolder;
+    padding: 0rem 0.5rem;
     top: 40%;
     left: 10%;
     display: none;
