--- a/src/stylesheet/styles.css
+++ b/src/stylesheet/styles.css
@@ -55,7 +55,7 @@ a, a:visited, a:hover, a:active {
     color: inherit;
 }
 
-.round-btn {
+.back-btn {
     display: flex;
     align-items: center;
     box-sizing: border-box;
